# MHDF-Verify

./: .gitignore  README.md  pom.xml
Example/: pom.xml
Example/src/main/java/cn/chengzhiya/example/: Main.java
Example/src/main/resources/: plugin.yml
MHDF-Verify-Client/: pom.xml
MHDF-Verify-Client/src/main/java/cn/chengzhiya/mhdfverify/: MHDFVerify.java  Verify.java
MHDF-Verify-Client/src/main/java/cn/chengzhiya/mhdfverify/client/: WebsocketClient.java
MHDF-Verify-Client/src/main/java/cn/chengzhiya/mhdfverify/manager/: FileManager.java  Sha256Manager.java
MHDF-Verify-Library/: CMakeLists.txt  cn_chengzhiya_mhdfverify_Verify.cpp  cn_chengzhiya_mhdfverify_Verify.h
MHDF-Verify-Server/: pom.xml
MHDF-Verify-Server-Web/: index.html  package-lock.json  package.json  tsconfig.app.json  typings.d.ts  vite.config.ts
MHDF-Verify-Server-Web/src/: App.vue  Router.ts  flag.txt  main.ts
MHDF-Verify-Server-Web/src/assets/css/: Alert.scss  App.scss  NotFound.scss
MHDF-Verify-Server-Web/src/assets/css/admin/: About.scss  Dashboard.scss  Login.scss  Manager.scss  Plugins.scss  User.scss
MHDF-Verify-Server-Web/src/util/: AlertUtil.ts  HitokotoUtil.ts  ServerUtil.ts  Sha256Util.ts  TimeUtil.ts
MHDF-Verify-Server-Web/src/util/admin/: PluginUtil.ts  UserUtil.ts
MHDF-Verify-Server-Web/src/views/: Alert.vue  NotFound.vue
MHDF-Verify-Server-Web/src/views/admin/: About.vue  Dashboard.vue  Login.vue  Manager.vue  Plugins.vue  Users.vue
MHDF-Verify-Server/src/main/java/cn/chengzhiya/mhdfverify/: Main.java
MHDF-Verify-Server/src/main/java/cn/chengzhiya/mhdfverify/annotation/: BodyData.java  CookieData.java  DefaultValue.java  RequestParam.java  RequestPath.java  RequestType.java
MHDF-Verify-Server/src/main/java/cn/chengzhiya/mhdfverify/command/: CommandExecutor.java  Plugin.java  TabCompleter.java  TabExecutor.java  User.java
MHDF-Verify-Server/src/main/java/cn/chengzhiya/mhdfverify/console/: CommandCompleter.java
(+35 files in other folders)
